<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/notification_iv_album"
        android:contentDescription="@string/label_notification_cover"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:scaleType="fitXY"/>

    <!--ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/notification_iv_icon"
        android:contentDescription="@string/label_notification_cover"
        android:layout_alignEnd="@id/notification_iv_album"
        android:layout_alignBottom="@id/notification_iv_album"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:scaleType="fitXY"/-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification_show_layout"
        android:layout_toEndOf="@id/notification_iv_album"
        android:layout_toStartOf="@id/notification_bottom_layout"
        android:layout_centerVertical="true">

        <!--ellipsize: 文本超过限制则...显示-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notification_top_song"
            android:text="@string/label_default_title"
            android:textColor="@color/colorNightBlack"
            android:textSize="14sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textStyle="bold"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notification_top_singer"
            android:text="@string/label_default_artist"
            android:textColor="@color/colorRelativeGrey"
            android:textSize="12sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_alignEnd="@id/notification_top_song"
            android:layout_below="@id/notification_top_song"
            android:layout_alignStart="@id/notification_top_song" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:id="@+id/notification_bottom_layout"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/notification_iv_love"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="7dp"
            android:src="@drawable/ic_love"
            android:contentDescription="@string/label_notification_love"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackground"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/notification_iv_play"
            android:src="@drawable/iv_lrc_play"
            android:contentDescription="@string/label_notification_toggle"
            android:layout_toEndOf="@id/notification_iv_love"
            android:clickable="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackground"/>

        <ImageView
            android:id="@+id/notification_iv_right"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="5dp"
            android:src="@drawable/iv_next"
            android:layout_centerVertical="true"
            android:contentDescription="@string/label_notification_next"
            android:layout_toStartOf="@id/notification_iv_close"
            android:layout_toEndOf="@id/notification_iv_play"
            android:background="?android:selectableItemBackground"/>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/notification_iv_close"
            android:src="@drawable/iv_close"
            android:padding="6dp"
            android:contentDescription="@string/label_notification_close"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</RelativeLayout>
